tooling/nargo_cli/tests/snapshots/execute__tests__conditional_regression_421_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "8585985482846127720",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91YX0/CMBC/bu2gEILRZxPf1LdNIOCDiRr5k6gv+gkWCZ9jH91VenK9lQehRfGSpt36693vfr0VNgFrk3UTZGwsgaYh5t72+X5WBPSVC8I9Fl8RkG8sjskRcEyPgKOMwPHLFCtQs2Gpp3iB4Yy9217bPiHzAUUtNIsb0v8kH95qT34B+Q808RnB/wj9yzj+85b181S5/oHFTRnOtwYxU4KZbsHMCGa2BTMnmPkWzIJgFgzTs2MBTc6oa4y6rusu9r4Ne+DuFZA8MbaKE3skWDwAt2aAxe9A1GekECwe8uH64F73EFNt+PA5WTXzwDlF5nB/23U7JzhfbSHuioyv7Rj3LOY5GKvejZ15+NNYxloVfBvqkZJ7qCvq3KZ4NqfJnKzcOB17LUkc6gt5KIa/tNd922dkDa4/8cTPWHyHt+ce10V78NqDz+p2Ycdd20wNveIa+L3nzFfrfWiegfRMolhJfNEakiy3SGdarhifOdG8OIy+N5h7Brvrm+2oL8//keQ/Pkz+gxj5Jz/MH/F3JP8X5lN4fPpqXDH8A7g6xjqLT4lfYLFC5jP7Z/k8/7F8urB5/5JVeC7jyfpjhjH8fVXg/mcCFl8x/Ju97nhy2ufFdjUui9WgXJWjcrkcfpRcMyCaGZ0+AUQ2l45hEgAA",
  "debug_symbols": "ldTdioQgFAfwd/G6C7/yo1dZlsHKBkEsrBaW6N1Xl4kZxC7OTWCcH3rs9D/QaPv9+XBhmlfUfR3Iz4PZ3BzS6jgb1EfnvXs+Pl8jnB+c/teviwl5uW4mbqiTokE2jKhTOOnJeYu6Fp/fDeIMWM+B9W21ntzW61o9ofoFCGOFaDFYELCgdcHvRbVvougllCiFAAsJFqoqpLwVonpXFF+dU1J2LihYMLDgYFG/3fYaRCLKSRQSLBRYaKiQ1e+h1QWwLAGFAgYFHATOtPox0Zne21ecTXsYPtJt+11sEXRLnAc77tHmyHunXT5q+m2ZTscgOQfSJCuatkjb/AE=",
  "file_map": {
    "50": {
      "source": "fn main(a: u32, mut c: [u32; 4]) {\n    //Issue reported in #421\n    if a == c[0] {\n        assert(c[0] == 0);\n    } else if a == c[1] {\n        assert(c[1] == 0);\n    } else if a == c[2] {\n        assert(c[2] == 0);\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/conditional_regression_421/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
